<resources>
    <string name="result">Student Number</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="choose">CHOOSE OPERATION</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="subjects">Subjects</string>
    <string name="update_password">Update Password</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="AccountInformation">
        <item> </item>
        <item>Add</item>
        <item>Delete</item>
        <item>Update</item>
    </string-array>
    <string-array name="Course">
        <item>Object-Oriented Programming (Lec)</item>
        <item>Object-Oriented Programming (Lab)</item>
        <item>Lunch</item>
    </string-array>
    <string-array name="Sched">
        <item>O32131bject-Oriented Programming (Lec)</item>
        <item>Object22-Oriented Programming (Lab)</item>
        <item>Lunch</item>
    </string-array>
    <string-array name="Room">
        <item>Object-O123riented Programming (Lec)</item>
        <item>Object-Oriented Programming (Lab)</item>
        <item>Lunch</item>
    </string-array>
    <string name="app_name">test</string>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="aatime">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>
</resources>
