<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            />
        <item android:id="@+id/nav_subjects"
            android:title="@string/subjects"
            android:icon="@drawable/ic_library_books_black_24dp"
            />
        <item android:id="@+id/nav_update_password"
            android:title="@string/update_password"
                android:icon="@drawable/ic_verified_user_black_24dp"
            />
        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            />
</menu>